Correct colour contrast in CSS

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -857,15 +857,19 @@ footer .container-fluid {
     margin-bottom: 0rem;
     padding-bottom: 0rem;
     // font-size: 1.25rem;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
 }
+
 
 .footer-logo-text {
     font-size: 1.5rem;
     line-height: 1rem;
 }
 
+.copysymbol {
+  font-size: 20px;
+}
 
 .footer a {
     /* color: #f49d00; */
@@ -986,7 +990,7 @@ footer .container-fluid {
 .sub-footer {
    
     // border-top: 2px solid #ffffff30;
-    background-color: $primary_color;
+    background-color: $primary_dark;
     color: var(--white);
 }
 
